# motor-sales-app

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  server.py  vercel.json
api/: index.py
data/: 2023-01-10_Audi_A3.json
